nav bar z-index fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -107,8 +107,6 @@
   }
 }
 
-
-
 .feature-card:hover {
   background: var(--black-gradient);
   box-shadow: var(--card-shadow);
@@ -132,7 +130,7 @@
 }
 
 .pink__gradient {
-  background: linear-gradient(90deg, #f4c4f3 0%, #fc67fa 100%);
+  background: linear-gradient(120deg, #f4c4f3 0%, #fc67fa 70%);
   filter: blur(900px);
 }
 
@@ -191,7 +189,6 @@
   transition: 0.5s ease;
 
   flex-direction: column;
-  z-index: 5;
 }
 
 .app__navbar-smallscreen_overlay .overlay__close {
@@ -201,7 +198,6 @@
   position: absolute;
   top: 20px;
   right: 20px;
-  z-index: 10;
 }
 
 .app__navbar-smallscreen-links {
